Fix/app shell frame tweaks (#2206)
* feat(theme): styling and spacing tweaks to overall frame
* feat(theme): adjust spacing of subnav items
* fix(theme): make surface- and on- colors more blue
* fix(styles): move default header color styles to typography component
* fix(styles): correct accidental horizontal scrolling in help panel

--- a/.storybook/theme/theme.scss
+++ b/.storybook/theme/theme.scss
@@ -30,7 +30,6 @@ $dark-colors: map-merge($dark-colors, map-get(tokens.$tokens, dark));
 
 .sb-show-main {
   background-color: var(--mdc-theme-surface);
-  color: var(--cv-theme-on-surface);
 
   .sbdocs-wrapper {
     padding-top: 0;
